# last_fm_fetch

./: .gitignore  Cargo.toml  README.md
examples/: validate_env.rs
src/: analytics.rs  config.rs  error.rs  file_handler.rs  lastfm_handler.rs  lib.rs  main.rs  types.rs  url_builder.rs
